# rscls

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix
src/: client.rs  codec.rs  context.rs  event.rs  handler.rs  lsp_extra.rs  main.rs  rust_project.rs  script.rs  server.rs  verbosity.rs
