[package]
name = "rscls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
eyre = "0.6.8"
log = "0.4.17"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
path-absolutize = "3.0.14"
serde = "1.0.159"
serde_json = "1.0.95"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
