[package]
name = "rscls"
version = "0.2.3"
edition = "2021"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>"]
description = "A language server for rust-script"
license = "MIT/Apache-2.0"
repository = "https://github.com/MiSawa/rscls"
readme = "README.md"
exclude = [".github", "release.toml", "flake.nix", "flake.lock"]

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
eyre = "0.6.8"
futures = "0.3.28"
log = "0.4.17"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
once_cell = "1.17.1"
path-absolutize = "3.0.14"
serde = "1.0.156"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "io-util", "macros", "io-std", "tracing", "process", "sync", "parking_lot", "fs"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

